--- a/Unit1/Pathway3/BirthdayCard/app/src/main/res/values/strings.xml
+++ b/Unit1/Pathway3/BirthdayCard/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
   -->
 <resources>
     <string name="app_name">Happy Birthday</string>
+    <string name="happy_birthday_text">Happy birthday Sam!</string>
+    <string name="signature_text">- from Choi</string>
 </resources>
